# accelerated-computing-hub

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-CODE  README.md  SECURITY.md  notebook_template.ipynb
.github/: copy-pr-bot.yaml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  request.yml
.github/workflows/: build-brev-cuda-cpp-tutorial-docker-image.yml  build-brev-cuda-python-tutorial-docker-image.yml  build-brev-gpu-cpp-tutorial-docker-image.yml  build-docker-images.yml  (+28 more)
Accelerated_Python_User_Guide/: Chapter_nvshmem4py.ipynb
accelerated-computing-with-python/: _config.yml  _toc.yml  appendix-01.md  chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  intro.md
brev/: .lycheeignore  base-git-pull.bash  base-start.bash  bashrc.bash  brev-delete-instances.bash  brev-start.bash  dev-build-containers.bash  dev-build.bash  dev-common.bash  dev-mount.bash  dev-shell.bash  dev-start-containers.bash  dev-start.bash  dev-stop-containers.bash  dev-stop.bash  dev-test.bash  discover-tutorials.bash  docker-compose-base.yml  entrypoint-base-user.bash  entrypoint-base.bash  entrypoint-jupyter-user.bash  entrypoint-jupyter.bash  entrypoint-nsight.bash  entrypoint-podman-gpu.bash  entrypoint-shell.bash  entrypoint.bash  generate-cscs-edf.bash  generate-syllabi-docker-composes.py  generate-tagged-docker-composes.py  ipython-startup-add-cwd-to-path.py  jupyter-generate-nsight-plugin-settings.bash  jupyter-generate-plugin-settings.bash  jupyter-generate-settings.bash  jupyter-server-config.py  jupyter-start.bash  jupyter_server_config.py  link_validator.py  local-start.bash  local-stop.bash  lychee.toml  (+17 more)
connect-with-experts/: README.md
cuda-cpp-tutorial/: README.md
cuda-python-tutorial/: README.md
demos/gtc_spring_2025/talks/cuda_techniques_utilization_and_concurrency_S72686/programmatic_dependent_launch/: CMakeLists.txt
docs/: brev.md  brev_create_launchable.md  brev_deploy_launchable.md  brev_launchable_architecture.md  brev_login_signup.md  cscs.md  notebook_template.ipynb
events/gtc_spring_2025/talks/cuda_techniques_grace_hopper_S72687/: CMakeLists.txt  sample5.cu
events/gtc_spring_2025/talks/cuda_techniques_utilization_and_concurrency_S72686/green_contexts/: CMakeLists.txt
gpu-cpp-tutorial/: README.md
gpu-cuda-python-tutorial/: 0.0_Welcome.ipynb  1.1_CUDA_Core_Solution.ipynb  2.0_CUDA_CCCL_Parallel.ipynb  2.0_CUDA_Compute.ipynb  2.1_CUDA_CCCL_Parallel_Solution.ipynb  2.1_CUDA_Compute_Solution.ipynb
gpu-deployment-tutorial/: gpu-deployment-from-scratch.md
gpu-python-tutorial/: 0.0_Welcome.ipynb  1.0_CPU_GPU_Comparison.ipynb  2.0_Numba.ipynb  2.1_Numba_lab.ipynb  2.2_Numba_lab_solution.ipynb  3.0_Numba_gauss.ipynb  3.1_Numba_lab_2.ipynb  3.2_Numba_lab_2_solution.ipynb  4.0_pyNVML.ipynb  4.1_CUDA_Array_Interface.ipynb  5.0_Cupy.ipynb  5.1_Cupy_Lab.ipynb  5.2_Cupy_Lab_solution.ipynb  5.3_Cupy_Nsight.ipynb  5.3_Cupy_nvmath.ipynb  6.0_cuDF.ipynb  7.0_cuML.ipynb  8.0_Multi-GPU_with_Dask.ipynb  README.md
gtc/spring_2025/talks/cuda_techniques_utilization_and_concurrency_S72686/cuda_graphs/: CMakeLists.txt  graph_2_ways.cu
learning-pytorch/: introduction-pytorch-learning-path.ipynb
resources/: README.md
tasks/: prd-chapter-13-ising-model-warp.md  tasks-prd-chapter-13-ising-model-warp.md
tutorials/floating-point-emulation/cpp_source/: CMakeLists.txt
tutorials/floating-point-emulation/cpp_source/include/: cuda_utilities.hpp  numerical.hpp  performance_measurement.hpp  performance_structures.hpp  random.hpp  tensor_helpers.hpp  tutorial_helpers.hpp
tutorials/floating-point-emulation/cpp_source/include/reference/: check_error.cu  check_error.hpp  cublaslt_runner.hpp  naive_reference.cu  reference.hpp
tutorials/floating-point-emulation/notebooks/02-Matmul-Fundamentals/: 02.01-MatmulFundamentals.ipynb  02.02-MatmulWithcuBLASDx.ipynb  CMakeLists.txt
tutorials/floating-point-emulation/notebooks/02-Matmul-Fundamentals/cpp/: .gitignore
tutorials/floating-point-emulation/notebooks/02-Matmul-Fundamentals/cpp/1a/: 1a_simple_dgemm_tensor.cu
tutorials/floating-point-emulation/notebooks/02-Matmul-Fundamentals/cpp/1b/: 1b_simple_dgemm_shared.cu
tutorials/floating-point-emulation/notebooks/02-Matmul-Fundamentals/cpp/1c/: 1c_simple_pipelined_dgemm.cu
tutorials/floating-point-emulation/notebooks/02-Matmul-Fundamentals/cpp/1d/: 1d_simple_dgemm_cublasdx.cu
tutorials/floating-point-emulation/notebooks/03-Ozaki-I-Emulation/: 03.01-UnfusedEmulation.ipynb  03.02-PartiallyFusedEmulation.ipynb  03.03-FusedEmulation.ipynb  CMakeLists.txt
tutorials/floating-point-emulation/notebooks/03-Ozaki-I-Emulation/cpp/2a_unfused_emulation/: dgemm_emulation.cu  emulation_kernels.hpp
tutorials/floating-point-emulation/notebooks/03-Ozaki-I-Emulation/cpp/2b_partially_fused_emulation/: dgemm_emulation.cu  emulation_kernels.hpp
tutorials/floating-point-emulation/notebooks/03-Ozaki-I-Emulation/cpp/2c_fully_fused_emulation/: dgemm_emulation.cu  emulation_kernels.hpp  slicing.hpp
tutorials/floating-point-emulation/notebooks/04-Challenge-Exercises/: 04.01-SYRK.ipynb  CMakeLists.txt
tutorials/floating-point-emulation/notebooks/04-Challenge-Exercises/cpp/3a_fused_syrk_emulation/: cublasdx_config.hpp.inc  emulation_kernels.hpp  fused_kernel.hpp.inc  kernel_config.hpp.inc  kernel_launch.hpp.inc  parameters.hpp.inc  pipeline_config.hpp.inc  syrk_emulation.cu
(+1431 files in other folders)
